--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,6 +19,13 @@
         }
         h1 {
             text-align: center;
+        }
+        .timer {
+            text-align: center;
+            font-size: 1.5rem;
+            margin-bottom: 20px;
+            color: #d9534f;
+            font-weight: bold;
         }
         .question {
             margin-bottom: 20px;
