--- a/index.html
+++ b/index.html
@@ -101,6 +101,13 @@
             border-color: #dc3545; /* Red border */
         }
 
+        /* Add Attempted Class for Highlighting */
+        .question-map .question-link.attempted {
+            background-color: #17a2b8; /* Blue background for attempted questions */
+            color: #fff; /* White text */
+            border-color: #17a2b8; /* Blue border */
+        }
+
         /* Submit Button and Score Styling */
         .question-map .submit-section {
             margin-top: 20px;
@@ -1142,6 +1149,14 @@
 
                     optionsDiv.appendChild(radioInput);
                     optionsDiv.appendChild(label);
+
+                    // Add Attempted Class when an option is selected
+                    radioInput.addEventListener('change', function() {
+                        const questionMapLink = document.querySelector(`.question-map .question-link[href="#question-${index + 1}"]`);
+                        if (questionMapLink && !questionMapLink.classList.contains('correct') && !questionMapLink.classList.contains('incorrect')) {
+                            questionMapLink.classList.add('attempted');
+                        }
+                    });
                 });
 
                 questionDiv.appendChild(optionsDiv);
@@ -1244,7 +1259,7 @@
                         const questionMapLink = document.querySelector(`.question-map .question-link[href="#question-${index + 1}"]`);
                         if (questionMapLink) {
                             questionMapLink.classList.add('correct');
-                            questionMapLink.classList.remove('incorrect');
+                            questionMapLink.classList.remove('incorrect', 'attempted');
                         }
 
                         // Update Feedback Below the Question
@@ -1260,7 +1275,7 @@
                         const questionMapLink = document.querySelector(`.question-map .question-link[href="#question-${index + 1}"]`);
                         if (questionMapLink) {
                             questionMapLink.classList.add('incorrect');
-                            questionMapLink.classList.remove('correct');
+                            questionMapLink.classList.remove('correct', 'attempted');
                         }
 
                         // Update Feedback Below the Question
@@ -1275,7 +1290,7 @@
                     const questionMapLink = document.querySelector(`.question-map .question-link[href="#question-${index + 1}"]`);
                     if (questionMapLink) {
                         // Remove both classes if the question was not answered
-                        questionMapLink.classList.remove('correct', 'incorrect');
+                        questionMapLink.classList.remove('correct', 'incorrect', 'attempted');
                     }
 
                     // Update Feedback Below the Question
@@ -1324,4 +1339,3 @@
     </script>
 </body>
 </html>
-
